ui/k8s-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: peychevi/k8s-ui:1.0.4
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health-check
            port: 3005
            scheme: HTTP
          initialDelaySeconds: 2
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health-check
            port: 3005
            scheme: HTTP
          initialDelaySeconds: 2
          periodSeconds: 5
        ports:
        - containerPort: 3005
