ui/k8s-ui-service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "ui-service"
  namespace: "default"
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"ui-backend-config"}}'
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 3005
  selector:
    app: "ui-1.0.4"
  type: "NodePort"
