ui/k8s-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: default
spec:
  tls:
  - hosts:
    - ipeychev.com
    secretName: ipeychev-com-tls-production
  rules:
  - host: ipeychev.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ui-service
          servicePort: 80
